[package]
name = "guile"
version = "0.0.3"
authors = ["David Li <li.davidm96@gmail.com>",
           "Dom Rodriguez <shymega@shymega.org.uk"]
description = "Safe bindings to GNU Guile."
repository = "https://github.com/shymega/guile-rs"
license = "GPL-3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[dependencies.guile-sys]
path = "guile-sys"
